Updated : Google Map API

--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
               </span>
             </div>
           </form>
+          <hr>
+          <div id="right-panel"></div>
         </div>
         <!-- End of Form - Find Route -->
 
@@ -62,7 +64,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
     <script src="asset/js/mapController.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCTuJrUXmrjChHtzRI6NLVi-X39r4gE8go&libraries=places&callback=initializeMap"
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAEbjA2TKEyOVng1mVnVDoc45tNlxkhAAY&libraries=places&callback=initializeMap"
         async defer></script>
   </body>
 </html>
