Added btn group for Direction method and updated UI

--- a/index.html
+++ b/index.html
@@ -37,8 +37,13 @@
               Find your delivery route
             </h3>
             <hr>
+            <div class="btn-group" role="group" aria-label="...">
+              <button type="button" class="btn btn-default">Left</button>
+              <button type="button" class="btn btn-default">Middle</button>
+              <button type="button" class="btn btn-default">Right</button>
+            </div>
             <label for="pickupPoint" class="sr-only">PICKUP POINT</label>
-            <input type="text" id="pickup-point" class="form-control push-10px-bottom" placeholder="PICKUP POINT">
+            <input type="search" id="pickup-point" class="form-control push-10px-bottom" placeholder="PICKUP POINT">
             <div class="input-group">
               <input class="form-control" id="dropoff-point" placeholder="DROPOFF POINT">
               <span class="input-group-btn">
