--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
     <title>DeliCar</title>
 
-    <!-- Bootstrap core CSS -->
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <!-- Custom styles for this template -->
     <link href="asset/css/custom.css" rel="stylesheet">
@@ -37,11 +37,11 @@
               Find your delivery route
             </h3>
             <hr>
-            <div class="btn-group" role="group" aria-label="...">
-              <button type="button" class="btn btn-default">Left</button>
-              <button type="button" class="btn btn-default">Middle</button>
-              <button type="button" class="btn btn-default">Right</button>
-            </div>
+            <!-- <div id="direction-mode" class="btn-group" role="group" aria-label="...">
+              <button type="button" class="btn btn-default"><i class="fa fa-car"></i></button>
+              <button type="button" class="btn btn-default"><i class="fa fa-train"></i></button>
+              <button type="button" class="btn btn-default"><i class="fa fa-male"></i></button>
+            </div> -->
             <label for="pickupPoint" class="sr-only">PICKUP POINT</label>
             <input type="search" id="pickup-point" class="form-control push-10px-bottom" placeholder="PICKUP POINT">
             <div class="input-group">
@@ -53,6 +53,41 @@
           </form>
           <hr>
           <div id="right-panel"></div>
+          <div>
+
+            <!-- Directoin Modes -->
+            <ul class="nav nav-tabs nav-justified" role="tablist">
+              <li role="presentation" class="active">
+                <a href="#home" aria-controls="home" role="tab" data-toggle="tab">
+                  <i class="fa fa-car"></i>
+                </a>
+              </li>
+              <li role="presentation">
+                <a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">
+                  <i class="fa fa-train"></i>
+                </a>
+              </li>
+              <li role="presentation">
+                <a href="#messages" aria-controls="messages" role="tab" data-toggle="tab">
+                  <i class="fa fa-male"></i>
+                </a>
+              </li>
+              <li role="presentation">
+                <a href="#settings" aria-controls="settings" role="tab" data-toggle="tab">
+                  <i class="fa fa-bicycle"></i>
+                </a>
+              </li>
+            </ul>
+
+            <!-- Tab panes -->
+            <div class="tab-content">
+              <div role="tabpanel" class="tab-pane active" id="home">...</div>
+              <div role="tabpanel" class="tab-pane" id="profile">...</div>
+              <div role="tabpanel" class="tab-pane" id="messages">...</div>
+              <div role="tabpanel" class="tab-pane" id="settings">...</div>
+            </div>
+
+          </div>
         </div>
         <!-- End of Form - Find Route -->
 
@@ -67,6 +102,7 @@
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
     <script src="asset/js/mapController.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAEbjA2TKEyOVng1mVnVDoc45tNlxkhAAY&libraries=places&callback=initializeMap"
