--- a/index.html
+++ b/index.html
@@ -51,29 +51,26 @@
               </span>
             </div>
           </form>
-          <hr>
-          <div id="right-panel"></div>
-          <div>
-
+          <div id="direction-mode">
             <!-- Directoin Modes -->
             <ul class="nav nav-tabs nav-justified" role="tablist">
               <li role="presentation" class="active">
-                <a href="#home" aria-controls="home" role="tab" data-toggle="tab">
+                <a href="#mode-drive" aria-controls="drive" role="tab" data-toggle="tab">
                   <i class="fa fa-car"></i>
                 </a>
               </li>
               <li role="presentation">
-                <a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">
+                <a href="#mode-train" aria-controls="train" role="tab" data-toggle="tab">
                   <i class="fa fa-train"></i>
                 </a>
               </li>
               <li role="presentation">
-                <a href="#messages" aria-controls="messages" role="tab" data-toggle="tab">
+                <a href="#mode-walk" aria-controls="walk" role="tab" data-toggle="tab">
                   <i class="fa fa-male"></i>
                 </a>
               </li>
               <li role="presentation">
-                <a href="#settings" aria-controls="settings" role="tab" data-toggle="tab">
+                <a href="#mode-bicycle" aria-controls="bicycle" role="tab" data-toggle="tab">
                   <i class="fa fa-bicycle"></i>
                 </a>
               </li>
@@ -81,10 +78,11 @@
 
             <!-- Tab panes -->
             <div class="tab-content">
-              <div role="tabpanel" class="tab-pane active" id="home">...</div>
+              <div id="right-panel"></div>
+              <!-- <div role="tabpanel" class="tab-pane active" id="home">...</div>
               <div role="tabpanel" class="tab-pane" id="profile">...</div>
               <div role="tabpanel" class="tab-pane" id="messages">...</div>
-              <div role="tabpanel" class="tab-pane" id="settings">...</div>
+              <div role="tabpanel" class="tab-pane" id="settings">...</div> -->
             </div>
 
           </div>
