Added app logo and fixed styles

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <nav id="site-header" class="navbar navbar-default navbar-fixed-top">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand" href="#">DeliCar</a>
+          <a class="navbar-brand" href="#"><img src="asset/image/logo.png" alt="" height="80"></a>
         </div>
       </div>
     </nav>
@@ -37,11 +37,6 @@
               Find your delivery route
             </h3>
             <hr>
-            <!-- <div id="direction-mode" class="btn-group" role="group" aria-label="...">
-              <button type="button" class="btn btn-default"><i class="fa fa-car"></i></button>
-              <button type="button" class="btn btn-default"><i class="fa fa-train"></i></button>
-              <button type="button" class="btn btn-default"><i class="fa fa-male"></i></button>
-            </div> -->
             <label for="pickupPoint" class="sr-only">PICKUP POINT</label>
             <input type="search" id="pickup-point" class="form-control push-10px-bottom" placeholder="PICKUP POINT">
             <div class="input-group">
